Fixed blog archive page title + sidebar visibility.

--- a/styles/scss/partials/scaffolding/inc/_page_header.scss
+++ b/styles/scss/partials/scaffolding/inc/_page_header.scss
@@ -83,7 +83,7 @@
 			@include breakpoint($mobile) { padding-bottom: 30px; }
 		}
 
-		.blog & {
+		.blog &, .archive &, .search & {
 			.timestamp.timestamp {
 				display: inline-block;
 				transform: translateY(7px);
